--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,10 +28,13 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - PYTHONPATH=/app
       - DEBIAN_FRONTEND=noninteractive
+      - HOST=0.0.0.0
+      - PORT=8080
     ports:
-      - "8001:8000"
+      - "8080:8080"
+    command: python3 -m podcastfy.api.fast_app
     healthcheck:
-      test: ["CMD", "python3", "-c", "import podcastfy"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 30s
       timeout: 10s
       retries: 3
